crates/pamoja-ffi/include/pamoja.h


typedef enum {
  PamojaStatus_Ok = 0,
  PamojaStatus_Transport = 1,
  PamojaStatus_Io = 2,
  PamojaStatus_Codec = 3,
  PamojaStatus_Closed = 4,
  PamojaStatus_Unsupported = 5,
  PamojaStatus_InvalidArgument = 6,
  PamojaStatus_Other = 7,
  PamojaStatus_Panic = 8,
  PamojaStatus_Auth = 9,
} PamojaStatus;
typedef enum {
  PamojaControlKind_Setpoint = 0,
  PamojaControlKind_Level = 1,
  PamojaControlKind_Surge = 2,
  PamojaControlKind_Monitor = 3,
  PamojaControlKind_Custom = 4,
} PamojaControlKind;
typedef enum {
  PamojaAlertKind_None = 0,
  PamojaAlertKind_OutOfRange = 1,
  PamojaAlertKind_RunningOut = 2,
  PamojaAlertKind_ChangingFast = 3,
  PamojaAlertKind_Custom = 4,
} PamojaAlertKind;
typedef enum {
  PamojaEntityKind_Topic = 0,
  PamojaEntityKind_ServiceRequest = 1,
  PamojaEntityKind_ServiceResponse = 2,
} PamojaEntityKind;
typedef struct PamojaBuffer PamojaBuffer;
typedef struct PamojaCdrReader PamojaCdrReader;
typedef struct PamojaCdrWriter PamojaCdrWriter;
typedef struct PamojaController PamojaController;
typedef struct PamojaProfile PamojaProfile;
typedef struct PamojaString PamojaString;
typedef struct {
  uint64_t active_us;
  uint64_t saver_us;
  uint64_t critical_us;
  float saver_below;
  float critical_below;
} PamojaPowerPlan;
typedef struct {
  PamojaControlKind kind;
  float setpoint;
  float hysteresis;
  bool cooling;
  float safe_band;
  float empty;
  uint32_t warn_within;
  bool rising;
  float limit;
} PamojaControlSpec;
typedef struct {
  uint64_t active_secs;
  uint64_t saver_secs;
  uint64_t critical_secs;
  float saver_below;
  float critical_below;
} PamojaPowerSchedule;
typedef struct {
  bool has_actuator;
  bool actuator;
  PamojaAlertKind alert;
  float reading;
  uint32_t samples;
  float rate;
  char code[PAMOJA_ALERT_CODE_LEN];
  float value;
} PamojaReaction;
typedef struct {
  uint8_t digest[PAMOJA_TYPE_HASH_LEN];
} PamojaTypeHash;
typedef struct {
  double x;
  double y;
  double z;
} PamojaVector3;
typedef struct {
  PamojaVector3 linear;
  PamojaVector3 angular;
} PamojaRos2Twist;
const char *pamoja_string_data(const PamojaString *string);
uintptr_t pamoja_string_len(const PamojaString *string);
void pamoja_string_free(PamojaString *string);
PamojaProfile *pamoja_profile_vaccine_fridge_monitor(void);
PamojaProfile *pamoja_profile_irrigation_node(void);
PamojaProfile *pamoja_profile_well_level(void);
PamojaProfile *pamoja_profile_flood_sensor(void);
PamojaProfile *pamoja_profile_from_json(const char *manifest);
PamojaString *pamoja_profile_to_json(const PamojaProfile *profile);
PamojaString *pamoja_profile_name(const PamojaProfile *profile);
PamojaString *pamoja_profile_topic(const PamojaProfile *profile);
PamojaStatus pamoja_profile_control(const PamojaProfile *profile, PamojaControlSpec *out_control);
PamojaStatus pamoja_profile_power(const PamojaProfile *profile, PamojaPowerSchedule *out_schedule);
PamojaStatus pamoja_profile_power_plan(const PamojaProfile *profile, PamojaPowerPlan *out_plan);
PamojaController *pamoja_profile_controller(const PamojaProfile *profile);
void pamoja_profile_free(PamojaProfile *profile);
PamojaController *pamoja_controller_setpoint(float setpoint,
                                             float hysteresis,
                                             bool cooling,
                                             float safe_band);
PamojaController *pamoja_controller_level(float empty, uint32_t warn_within);
PamojaController *pamoja_controller_surge(bool rising, float limit);
PamojaController *pamoja_controller_monitor(void);
PamojaStatus pamoja_controller_evaluate(PamojaController *controller,
                                        float reading,
                                        PamojaReaction *out_reaction);
void pamoja_controller_free(PamojaController *controller);
bool pamoja_ros2_name_is_valid(const char *name);
bool pamoja_ros2_name_is_fully_qualified(const char *name);
const char *pamoja_ros2_entity_kind_prefix(PamojaEntityKind kind);
PamojaString *pamoja_ros2_dds_topic(const char *fqn, PamojaEntityKind kind);
PamojaString *pamoja_ros2_percent_mangle(const char *name);
PamojaString *pamoja_ros2_dds_type_name(const char *ros_type);
PamojaStatus pamoja_ros2_type_hash_parse(const char *text, PamojaTypeHash *out_hash);
PamojaString *pamoja_ros2_type_hash_to_string(PamojaTypeHash hash);
PamojaString *pamoja_ros2_entity_key(uint32_t domain_id,
                                     const char *fqn,
                                     const char *ros_type,
                                     PamojaTypeHash hash);
PamojaBuffer *pamoja_ros2_twist_to_cdr(PamojaRos2Twist twist);
PamojaStatus pamoja_ros2_twist_from_cdr(const uint8_t *data,
                                        uintptr_t data_len,
                                        PamojaRos2Twist *out_twist);
PamojaCdrWriter *pamoja_cdr_writer_new(void);
PamojaStatus pamoja_cdr_writer_write_i32(PamojaCdrWriter *writer, int32_t value);
PamojaStatus pamoja_cdr_writer_write_u32(PamojaCdrWriter *writer, uint32_t value);
PamojaStatus pamoja_cdr_writer_write_f32(PamojaCdrWriter *writer, float value);
PamojaStatus pamoja_cdr_writer_write_f64(PamojaCdrWriter *writer, double value);
PamojaBuffer *pamoja_cdr_writer_into_bytes(PamojaCdrWriter *writer);
void pamoja_cdr_writer_free(PamojaCdrWriter *writer);
PamojaCdrReader *pamoja_cdr_reader_new(const uint8_t *data, uintptr_t data_len);
PamojaStatus pamoja_cdr_reader_read_i32(PamojaCdrReader *reader, int32_t *out_value);
PamojaStatus pamoja_cdr_reader_read_u32(PamojaCdrReader *reader, uint32_t *out_value);
PamojaStatus pamoja_cdr_reader_read_f32(PamojaCdrReader *reader, float *out_value);
PamojaStatus pamoja_cdr_reader_read_f64(PamojaCdrReader *reader, double *out_value);
void pamoja_cdr_reader_free(PamojaCdrReader *reader);
bool pamoja_keyexpr_is_valid(const char *key);
bool pamoja_keyexpr_is_canon(const char *key);
PamojaString *pamoja_keyexpr_canonize(const char *key);
bool pamoja_keyexpr_matches(const char *pattern, const char *key);